--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <div class="box1 box" >
             <div class="box-content">
                 <h2>Health & Personal Care</h2>
-                <div class="box-img" style="background-image: url('./images/box2_image.jpg');">
+                <div class="box-img" style="background-image: url('box2_image.jpg');">
 
                 </div>
                 <p>Shop Now</p>
@@ -85,7 +85,7 @@
         <div class="box2 box">
             <div class="box-content">
                 <h2>Clothing</h2>
-                <div class="box-img" style="background-image: url('./images/box1_image.jpg');">
+                <div class="box-img" style="background-image: url('box1_image.jpg');">
 
                 </div>
                 <p>Shop Now</p>
@@ -95,7 +95,7 @@
         <div class="box3 box">
             <div class="box-content">
                 <h2>Wardrobe</h2>
-                <div class="box-img" style="background-image: url('./images/box3_image.jpg');">
+                <div class="box-img" style="background-image: url('box3_image.jpg');">
 
                 </div>
                 <p>Shop Now</p>
@@ -104,7 +104,7 @@
         <div class="box4 box">
             <div class="box-content">
                 <h2>Electronic Accessories</h2>
-                <div class="box-img" style="background-image: url('./images/box4_image.jpg');">
+                <div class="box-img" style="background-image: url('box4_image.jpg');">
 
                 </div>
                 <p>Shop Now</p>
@@ -115,7 +115,7 @@
         <div class="box1 box" >
             <div class="box-content">
                 <h2>Makeup</h2>
-                <div class="box-img" style="background-image: url('./images/box5_image.jpg');">
+                <div class="box-img" style="background-image: url('box5_image.jpg');">
 
                 </div>
                 <p>Shop Now</p>
@@ -124,7 +124,7 @@
         <div class="box2 box">
             <div class="box-content">
                 <h2>Pets & Animals</h2>
-                <div class="box-img" style="background-image: url('./images/box6_image.jpg');">
+                <div class="box-img" style="background-image: url('box6_image.jpg');">
 
                 </div>
                 <p>Shop Now</p>
@@ -134,7 +134,7 @@
         <div class="box3 box">
             <div class="box-content">
                 <h2>Toys & Gifts</h2>
-                <div class="box-img" style="background-image: url('./images/box7_image.jpg');">
+                <div class="box-img" style="background-image: url('box7_image.jpg');">
 
                 </div>
                 <p>Shop Now</p>
@@ -143,7 +143,7 @@
         <div class="box4 box">
             <div class="box-content">
                 <h2>Fashion & Accessories</h2>
-                <div class="box-img" style="background-image: url('./images/box8_image.jpg');">
+                <div class="box-img" style="background-image: url('box8_image.jpg');">
 
                 </div>
                 <p>Shop Now</p>
